<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/search"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="24dp"
            android:text="@string/search"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:textAlignment="viewStart"
            android:fontFamily="monospace"
            android:textAllCaps="false"
            android:background="@color/colorPrimaryDark"/>

        <FrameLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="34dp"
            android:layout_marginStart="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/search">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="6dp"
                android:src="@drawable/pp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/frame"/>
        </FrameLayout>

        <TextView
            android:id="@+id/explore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@+id/search"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/explore_place"
            android:textSize="28sp"
            android:fontFamily="monospace"
            android:textStyle="bold"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/trending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@+id/explore"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/trending"
            android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:textColor="#F5F2F2"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trending"/>

        <TextView
            android:id="@+id/popular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@+id/rv"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/popular_categories"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textColor="#F5F2F2"/>

        <LinearLayout
            android:id="@+id/btn_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/popular"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="38dp"
                android:padding="4dp"
                android:background="@drawable/button_color_dark"
                android:src="@drawable/ic_travel"/>
            <ImageButton
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginEnd="38dp"
                android:padding="4dp"
                android:background="@drawable/button_color_dark"
                android:src="@drawable/ic_countryside"/>
            <ImageButton
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginEnd="38dp"
                android:padding="4dp"
                android:background="@drawable/button_color_dark"
                android:src="@drawable/ic_mount"/>
            <ImageButton
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginEnd="38dp"
                android:padding="4dp"
                android:background="@drawable/button_color_dark"
                android:src="@drawable/ic_canoe"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginBottom="90dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/btn_container"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="38dp"
                android:padding="4dp"
                android:text="@string/camping"
                android:textSize="12sp"
                android:textColor="#FFFFFF"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="38dp"
                android:padding="4dp"
                android:text="@string/country_side"
                android:textSize="12sp"
                android:textColor="#FFFFFF"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="38dp"
                android:padding="4dp"
                android:text="@string/mountain"
                android:textSize="12sp"
                android:textColor="#FFFFFF"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="38dp"
                android:padding="4dp"
                android:text="@string/lake"
                android:textSize="12sp"
                android:textColor="#FFFFFF"
                android:textAlignment="center"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>